# mjpeg-cgi

./: .gitignore  INSTALL  Makefile.am  README.md  autogen.sh  config.xml  configure.ac  index.html  main.cpp  mjpeg-cgi.cbp  postinst  version
conf/: mjpeg-cgi  mjpeg-cgi.service  nginx.conf  reconf  wpa_cli.sh
include/: CgiService.h  Config.h  Container.h  Device.h  DeviceList.h  HttpClient.h  Icon.h  ImgMgk.h  Item.h  Log.h  Request.h  Response.h  Serial.h  Service.h  UPnP.h  UPnP_CP.h  UPnP_MediaRenderer.h  UPnP_MediaServer.h  cam.h  xmltools.h
src/: CgiService.cpp  Config.cpp  Container.cpp  Device.cpp  DeviceList.cpp  HttpClient.cpp  Icon.cpp  ImgMgk.cpp  Item.cpp  Log.cpp  Request.cpp  Response.cpp  Serial.cpp  Server.cpp  Service.cpp  UPnP.cpp  UPnP_CP.cpp  UPnP_MediaRenderer.cpp  UPnP_MediaServer.cpp  base64.cpp  cam.cpp  xmltools.cpp
